# TinyLM

./: .gitignore  README.md  data.py  pyproject.toml  sample.py
configs/: gpt-17M-only-norms.yaml  gpt-17M.yaml  gpt-5M.yaml  gpt.yaml
src/tinylm/: tokenizers.py  train.py  viz.py
src/tinylm/models/: gpt.py
